@@ -1,3 +1,8 @@
+2007-05-26  Arnaud Cornet <arnaud.cornet@gmail.com>
+
+	* src: lot's of code cleanup and refactoring. Open door to better
+	dynamic config support.
+
 2007-02-27  Arnaud Cornet <arnaud.cornet@gmail.com>
 
 	* bip: Release 0.6.0.
